--- a/SG_Property_Assistant/pages/TabMy/signInPage/signInPage.wxml
+++ b/SG_Property_Assistant/pages/TabMy/signInPage/signInPage.wxml
@@ -2,17 +2,17 @@
 
 <view class='login_area'>
   <!--手机验证码  -->
-  <view class='input_area flex_row'>
+  <!-- <view class='input_area flex_row'>
     <input class='short_input' placeholder-class='input_faz B2B2B2' placeholder='请输入手机号'></input>
     <text class='send_verify_num'>发送验证码</text>
-  </view>
+  </view> -->
 
   <!--验证码  -->
-  <view class='input_area'>
+  <!-- <view class='input_area'>
     <input class='smsCode' placeholder-class='input_faz B2B2B2' placeholder='请输入验证码'></input>
-  </view>
+  </view> -->
 
-  <button class='post_ulog'>提交</button>
+  <!-- <button class='post_ulog'>提交</button> -->
   <view class='agree_protocol'>
     <text>- 推荐使用微信登录 -</text>
   </view>
