--- a/SG_Property_Assistant/pages/TabRecommend/helpMeFindRoom/helpMeFindRoom.wxml
+++ b/SG_Property_Assistant/pages/TabRecommend/helpMeFindRoom/helpMeFindRoom.wxml
@@ -12,11 +12,11 @@
     <view class='dl_content'>
       <text class="range_nbmer">{{minPrice}}~{{maxPrice}}万</text>
       <movable-area>
-        <movable-view x="{{startPoint.x}}" y="{{startPoint.y}}" animation='true' direction="{{huadongLeft}}" data-dataNumber="left" bindchange='movableBindChange' class="movable_view">||</movable-view>
+        <movable-view x="{{startPoint.x}}" animation='true' direction="{{huadongLeft}}" data-dataNumber="left" bindchange='movableBindChange' class="movable_view">||</movable-view>
 
         <movable-view x="{{sliderPointX}}" animation='true' direction="none" data-dataNumber="slider" class="slider" style="width:{{sliderWidth}}rpx; left:{{sliderPointX}}rpx"></movable-view>
 
-        <movable-view x="{{endPoint.x}}" y="{{endPoint.y}}" animation='true' direction="{{huadongRight}}" data-dataNumber="right" bindchange='movableBindChange' class="movable_view">||</movable-view>
+        <movable-view x="120" animation='true' direction="{{huadongRight}}" data-dataNumber="right" bindchange='movableBindChange' class="movable_view">||</movable-view>
       </movable-area>
       <view class="huanwei">
         <text class="jiage">20万</text>
