--- a/SG_Property_Assistant/pages/TabRecommend/projectProfilePage/projectProfilePage.wxml
+++ b/SG_Property_Assistant/pages/TabRecommend/projectProfilePage/projectProfilePage.wxml
@@ -1,69 +1,77 @@
 <!--pages/TabRecommend/projectProfilePage/projectProfilePage.wxml-->
 <view wx:if="{{isfixed}}" class="btn">
-  <text>交通</text>
-  <text>教育</text>
-  <text>医疗</text>
-  <text>购物</text>
+  <text bindtap="toViewClick" class='{{nowstatus == "notic" ? "on" : ""}}' data-hash="notic">交通</text>
+  <text bindtap="toViewClick" class='{{nowstatus == "schoolBox" ? "on" : ""}}' data-hash="schoolBox">教育</text>
+  <text bindtap="toViewClick" class='{{nowstatus == "medicalBox" ? "on" : ""}}' data-hash="medicalBox">医疗</text>
+  <text bindtap="toViewClick" class='{{nowstatus == "shoppingBox" ? "on" : ""}}' data-hash="shoppingBox">购物</text>
 </view>
 
-<view class="building_introd">
-  <text class="title_wenben">楼盘介绍</text>
-  <rich-text nodes="{{intro}}" class="content_zhong" bindtap="tap"></rich-text>
+<!-- scroll-into-view="{{toView}}" -->
+<scroll-view class="box" scroll-y="true" style="height:{{winHeight}}" scroll-with-animation="true" scroll-top="{{scrollTop}}" bindscroll='onPageScroll'>
+  <view class="building_introd" id='building'>
+    <text class="title_wenben">楼盘介绍</text>
+    <rich-text nodes="{{intro}}" class="content_zhong" bindtap="tap"></rich-text>
 
-  <text class="title_wenben">项目位置</text>
-  <!-- 地图 -->
-  <image class="map" src="{{projectMapUrl}}"></image>
+    <text class="title_wenben">项目位置</text>
+    <!-- 地图 -->
+    <image catchtap='showBigPictureTap' data-src="0" class="map" src="{{projectMapUrl}}"></image>
 
-  <text class="title_wenben">新加坡地区分布</text>
-  <image class="bitmap" src="/images/bitmap.jpg"></image>
-</view>
+     <text catchtap='showBigPictureTap' class="title_wenben">地图分布</text>
+    <!-- 地图 -->
+    <image catchtap='showBigPictureTap' data-src="1" class="map" src="/images/map.jpg"></image>
 
-<!-- 交通 -->
-<view class="facilities_box" id="notic">
-  <view class="title_biaoti">
-    <image class="icon_mi" src="/images/traffic.png"></image>
-    <text class="text_bt">交通</text>
+    <text class="title_wenben">新加坡地区分布</text>
+    <image class="bitmap" src="/images/bitmap.jpg"></image>
   </view>
 
-  <image class="map" src="{{trafficMapUrl}}"></image>
+  <!-- 交通 -->
+  <view class="facilities_box" id="notic">
+    <view class="title_biaoti">
+      <image class="icon_mi" src="/images/traffic.png"></image>
+      <text class="text_bt">交通</text>
+    </view>
 
-  <view class="north_line">
-    <text wx:for="{{amenities.mrts}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
-  </view>
-</view>
+    <image catchtap='showBigPictureTap' data-src="2" class="map" src="{{trafficMapUrl}}"></image>
 
-<!-- 教育 -->
-<view class="facilities_box">
-  <view class="title_biaoti">
-    <image class="icon_mi" src="/images/education.png"></image>
-    <text class="text_bt">教育</text>
+    <view class="north_line">
+      <text wx:for="{{amenities.mrts}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    </view>
   </view>
-  <image class="map" src="{{schoolMapUrl}}"></image>
-  <view class="north_line">
-    <text wx:for="{{amenities.schools}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
-  </view>
-</view>
 
-<!-- 医疗 -->
-<view class="facilities_box">
-  <view class="title_biaoti">
-    <image class="icon_mi" src="/images/medical_care.png"></image>
-    <text class="text_bt">医疗</text>
+  <!-- 教育 -->
+  <view class="facilities_box" id="schoolBox">
+    <view class="title_biaoti">
+      <image class="icon_mi" src="/images/education.png"></image>
+      <text class="text_bt">教育</text>
+    </view>
+    <image catchtap='showBigPictureTap' data-src="3" class="map" src="{{schoolMapUrl}}"></image>
+    <view class="north_line">
+      <text wx:for="{{amenities.schools}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    </view>
   </view>
-  <image class="map" src="{{medicalMapUrl}}"></image>
-  <view class="north_line">
-    <text wx:for="{{amenities.hospitals}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
-  </view>
-</view>
 
-<!--  -->
-<view class="facilities_box">
-  <view class="title_biaoti">
-    <image class="icon_mi" src="/images/shopping.png"></image>
-    <text class="text_bt">购物</text>
+  <!-- 医疗 -->
+  <view class="facilities_box" id="medicalBox">
+    <view class="title_biaoti">
+      <image class="icon_mi" src="/images/medical_care.png"></image>
+      <text class="text_bt">医疗</text>
+    </view>
+    <image catchtap='showBigPictureTap' data-src="4" class="map" src="{{medicalMapUrl}}"></image>
+    <view class="north_line">
+      <text wx:for="{{amenities.hospitals}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    </view>
   </view>
-  <image class="map" src="{{shoppingMapUrl}}"></image>
-  <view class="north_line">
-    <text wx:for="{{amenities.malls}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+
+  <!--  -->
+  <view class="facilities_box" id="shoppingBox">
+    <view class="title_biaoti">
+      <image class="icon_mi" src="/images/shopping.png"></image>
+      <text class="text_bt">购物</text>
+    </view>
+    <image catchtap='showBigPictureTap' data-src="5" class="map" src="{{shoppingMapUrl}}"></image>
+    <view class="north_line">
+      <text wx:for="{{amenities.malls}}" catchtap='showDetailsTap' data-remark="{{item.remark}}" wx:key="{{key}}">{{key}}.{{item.name}}</text>
+    </view>
   </view>
-</view>
+
+</scroll-view>
