--- a/SG_Property_Assistant/pages/TabRecommend/projectProfilePage/projectProfilePage.wxss
+++ b/SG_Property_Assistant/pages/TabRecommend/projectProfilePage/projectProfilePage.wxss
@@ -89,11 +89,20 @@ page {
   width: calc(100% - 120rpx);
   position: fixed;
   top: 0px;
-  z-index: 99;
+  z-index: 9009;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0px 2px 5px #eee;
 }
 
 .btn text {
   font-size: 34rpx;
   font-weight: 500;
   line-height: 80rpx;
+  color: #999;
 }
+
+.btn text.on{
+  color: #333
+}
+
+.box{height:100%;}
