disable comments area, since no submit form

--- a/SG_Property_Assistant/pages/TabRecommend/productDetails/productDetails.wxml
+++ b/SG_Property_Assistant/pages/TabRecommend/productDetails/productDetails.wxml
@@ -335,18 +335,18 @@
   <!-- 评论(120) -->
   <view class="house_apartment">
 
-    <view class="title_div">
+    <!-- <view class="title_div">
       <text class='title_bj'>评论</text>
-    </view>
+    </view> -->
 
-    <view class="comment">
+    <!-- <view class="comment">
 
     </view>
 
     <view class="custom_button custom_style">
       <text class="button_text">查看更多评论</text>
       <image class="more_butom" src='/images/more_jiatou.png'></image>
-    </view>
+    </view> -->
 
   </view>
 
