--- a/SG_Property_Assistant/pages/TabRecommend/productDetails/productDetails.wxml
+++ b/SG_Property_Assistant/pages/TabRecommend/productDetails/productDetails.wxml
@@ -79,14 +79,14 @@
           <text>{{tenure}}</text>
         </view>
         <view class='list_right'>
-          <text class='c999'>单位数量：</text>
-          <text>44</text>
+          <text class='c999'>面积：</text>
+          <text>{{minSize}} - {{maxSize}}sqft</text>
         </view>
       </view>
-      <view class='list_box flex_row'>
+      <!-- <view class='list_box flex_row'>
         <text class='c999'>面积：</text>
         <text>{{minSize}} - {{maxSize}}sqft</text>
-      </view>
+      </view> -->
 
       <view class='list_box flex_row'>
         <text class='c999'>样板间开发日期：</text>
