--- a/SG_Property_Assistant/pages/TabRecommend/layoutHouseList/layoutHouseListPage.wxss
+++ b/SG_Property_Assistant/pages/TabRecommend/layoutHouseList/layoutHouseListPage.wxss
@@ -46,3 +46,20 @@ page{
   font-weight: normal;
   font-size: 30rpx;
 }
+
+.no_data{
+  text-align: center;
+  padding-top: 260rpx;
+}
+
+.no_data image{
+  width: 300rpx;
+  height: 260rpx;
+}
+
+.no_text{
+  font-size: 30rpx;
+  color: #333;
+  text-align: center;
+  display: block;
+}
