--- a/SG_Property_Assistant/pages/TabRecommend/productDetails/productDetails.wxss
+++ b/SG_Property_Assistant/pages/TabRecommend/productDetails/productDetails.wxss
@@ -692,3 +692,8 @@ button, button::before, button::after {
   width: 44rpx;
   height: 44rpx;
 }
+
+.media_bigPic {
+  width: 100%;
+  height: 560rpx;
+}
