--- a/SG_Property_Assistant/pages/TabRecommend/propertiesNewsList/propertiesNewsList.wxss
+++ b/SG_Property_Assistant/pages/TabRecommend/propertiesNewsList/propertiesNewsList.wxss
@@ -29,3 +29,20 @@ page{
 .news_time {
   margin-top: 12rpx;
 }
+
+.no_data{
+  text-align: center;
+  padding-top: 260rpx;
+}
+
+.no_data image{
+  width: 300rpx;
+  height: 260rpx;
+}
+
+.no_text{
+  font-size: 30rpx;
+  color: #333;
+  text-align: center;
+  display: block;
+}
