--- a/SG_Property_Assistant/pages/TabMy/TabMy.wxml
+++ b/SG_Property_Assistant/pages/TabMy/TabMy.wxml
@@ -8,7 +8,7 @@
         <text class='user_iphe'>{{province}} {{city}}</text>
       </view>
     </view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+    <!-- <view class="weui-cell__ft weui-cell__ft_in-access"></view> -->
   </view>
 </block>
 
